inception time arranged for all  couples and one specific testing subject (3)

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\env\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.constants import UNIVARIATE_ARCHIVE_NAMES as ARCHIVE_NAMES\n",
     "\n",
@@ -39,10 +30,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Parameters\n",
+    "option = 'InceptionTime'\n",
+    "#list_targets = [1, 2]\n",
+    "list_labels = [0, 1]\n",
+    "root_dir = '../inception_time_root_dir'\n",
+    "xps = ['use_bottleneck', 'use_residual', 'nb_filters', 'depth',\n",
+    "       'kernel_size', 'batch_size']\n",
+    "\n",
+    "csv_file = \"../inception_time_root_dir/archives/All_Subs_Diff_Modules_nofilter_withoutAUc.csv\"\n",
+    "train_df = pd.read_csv(csv_file,  delimiter=\",\")  # 101 features (only AU_r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory):\n",
+    "    input_shape = x_train.shape[1:]\n",
+    "\n",
+    "    classifier = create_classifier(classifier_name, input_shape, nb_classes,\n",
+    "                                   output_directory)\n",
+    "\n",
+    "    classifier.fit(x_train, y_train, x_test, y_test, y_true)\n",
+    "\n",
+    "\n",
+    "def create_classifier(classifier_name, input_shape, nb_classes, output_directory,\n",
+    "                      verbose=False, build=True):\n",
+    "    print(\"Creating Classifier\\n\")\n",
+    "    if classifier_name == 'nne':\n",
+    "        from classifiers import nne\n",
+    "        return nne.Classifier_NNE(output_directory, input_shape,\n",
+    "                                  nb_classes, verbose)\n",
+    "    if classifier_name == 'inception':\n",
+    "        from classifiers import inception\n",
+    "        return inception.Classifier_INCEPTION(output_directory, input_shape, nb_classes, verbose,\n",
+    "                                              build=build)\n",
+    "\n",
+    "\n",
+    "def get_xp_val(xp):\n",
+    "    if xp == 'batch_size':\n",
+    "        xp_arr = [16, 32, 128]\n",
+    "    elif xp == 'use_bottleneck':\n",
+    "        xp_arr = [False]\n",
+    "    elif xp == 'use_residual':\n",
+    "        xp_arr = [False]\n",
+    "    elif xp == 'nb_filters':\n",
+    "        xp_arr = [16, 64]\n",
+    "    elif xp == 'depth':\n",
+    "        xp_arr = [3, 9]\n",
+    "    elif xp == 'kernel_size':\n",
+    "        xp_arr = [8, 64]\n",
+    "    else:\n",
+    "        raise Exception('wrong argument')\n",
+    "    return xp_arr\n",
+    "\n",
     "def split_x_y(data_loader):\n",
     "  x = []\n",
     "  y = []\n",
@@ -53,9 +108,8 @@
     "  y = torch.cat(y, dim=0)\n",
     "  return x, y\n",
     "\n",
-    "# function for testing the incepiton time series classifier\n",
     "# Training on one specific subject\n",
-    "def test(list_targets, list_labels, subj, train_df):\n",
+    "def prepare_data(list_targets, list_labels, test_subj, train_df):\n",
     "    # Select only the classes we want to predict\n",
     "    train_df, nclasses, targets_numpy = set_targets(train_df, list_targets, list_labels)\n",
     "\n",
@@ -64,13 +118,13 @@
     "\n",
     "    # Normalise the features\n",
     "    features_numpy = normalize_data(train_df, False) #parameters.normalise_individual_subjects\n",
-    "    input_dim = features_numpy.shape[1]\n",
-    "\n",
     "    del train_df\n",
     "\n",
     "    subj = np.unique(subjects)\n",
     "\n",
-    "    test_idx = np.array([subj[2]])\n",
+    "    test_subj -= 1\n",
+    "\n",
+    "    test_idx = np.array([subj[test_subj]])\n",
     "\n",
     "    train_idx = np.setxor1d(subj, test_idx)\n",
     "\n",
@@ -132,79 +186,81 @@
     "    y_true = tf.convert_to_tensor(y_true, dtype=tf.float32)\n",
     "    y_true_train = tf.convert_to_tensor(y_true_train, dtype=tf.float32)\n",
     "    \n",
-    "    return x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc"
+    "    return x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc\n",
+    "\n",
+    "def inception_time(list_targets, test_subj):\n",
+    "    # run nb_iter_ iterations of Inception on the whole TSC archive\n",
+    "    classifier_name = 'inception'\n",
+    "    archive_name = ARCHIVE_NAMES[0]\n",
+    "    model_couple = str(list_targets[0]) + '_' + str(list_targets[1]) + '_' + str(test_subj)\n",
+    "    nb_iter_ = 5\n",
+    "\n",
+    "    print(f'Running InceptionTime on {list_targets[0]}_{list_targets[1]} with test subject {test_subj}')\n",
+    "\n",
+    "    for iter in range(nb_iter_):\n",
+    "        print('\\titeration', iter)\n",
+    "\n",
+    "        trr = ''\n",
+    "        if iter != 0:\n",
+    "            trr = '_itr_' + str(iter)\n",
+    "\n",
+    "        tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + trr + '/'\n",
+    "\n",
+    "        output_directory = tmp_output_directory + model_couple + '/'\n",
+    "\n",
+    "        temp_output_directory = create_directory(output_directory)\n",
+    "\n",
+    "        if temp_output_directory is None:\n",
+    "            print('\\t\\tAlready_done', tmp_output_directory, model_couple)\n",
+    "            continue\n",
+    "\n",
+    "        x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets, list_labels, test_subj, train_df)\n",
+    "\n",
+    "        fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n",
+    "\n",
+    "        print(f'\\t\\titeration {iter} DONE')\n",
+    "\n",
+    "        # the creation of this directory means\n",
+    "        create_directory(output_directory + '/DONE')\n",
+    "\n",
+    "    print(f'\\t\\Running InceptionTime on the whole TSC archive for {model_couple}')\n",
+    "    # run the ensembling of these iterations of Inception\n",
+    "    classifier_name = 'nne'\n",
+    "\n",
+    "    tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + '/'\n",
+    "\n",
+    "    x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets, list_labels, test_subj, train_df)\n",
+    "\n",
+    "    output_directory = tmp_output_directory + model_couple + '/'\n",
+    "\n",
+    "    fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n",
+    "\n",
+    "    print('\\t\\t\\t\\tDONE')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory):\n",
-    "    input_shape = x_train.shape[1:]\n",
-    "\n",
-    "    classifier = create_classifier(classifier_name, input_shape, nb_classes,\n",
-    "                                   output_directory)\n",
-    "\n",
-    "    classifier.fit(x_train, y_train, x_test, y_test, y_true)\n",
-    "\n",
-    "\n",
-    "def create_classifier(classifier_name, input_shape, nb_classes, output_directory,\n",
-    "                      verbose=False, build=True):\n",
-    "    print(\"Creating Classifier\\n\")\n",
-    "    if classifier_name == 'nne':\n",
-    "        from classifiers import nne\n",
-    "        return nne.Classifier_NNE(output_directory, input_shape,\n",
-    "                                  nb_classes, verbose)\n",
-    "    if classifier_name == 'inception':\n",
-    "        from classifiers import inception\n",
-    "        return inception.Classifier_INCEPTION(output_directory, input_shape, nb_classes, verbose,\n",
-    "                                              build=build)\n",
-    "\n",
-    "\n",
-    "def get_xp_val(xp):\n",
-    "    if xp == 'batch_size':\n",
-    "        xp_arr = [16, 32, 128]\n",
-    "    elif xp == 'use_bottleneck':\n",
-    "        xp_arr = [False]\n",
-    "    elif xp == 'use_residual':\n",
-    "        xp_arr = [False]\n",
-    "    elif xp == 'nb_filters':\n",
-    "        xp_arr = [16, 64]\n",
-    "    elif xp == 'depth':\n",
-    "        xp_arr = [3, 9]\n",
-    "    elif xp == 'kernel_size':\n",
-    "        xp_arr = [8, 64]\n",
-    "    else:\n",
-    "        raise Exception('wrong argument')\n",
-    "    return xp_arr"
+    "for i in range(2):\n",
+    "    for j in range(i+1, 2):\n",
+    "        inception_time([i, j], 3)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# to remove\n",
-    "csv_file = \"../inception_time_root_dir/archives/All_Subs_Diff_Modules_nofilter_withoutAUc.csv\"\n",
-    "train_df = pd.read_csv(csv_file,  delimiter=\",\")  # 101 features (only AU_r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Parameters\n",
-    "option = 'InceptionTime'\n",
-    "list_targets = [1, 2]\n",
-    "list_labels = [0, 1]\n",
-    "root_dir = '../inception_time_root_dir'\n",
-    "xps = ['use_bottleneck', 'use_residual', 'nb_filters', 'depth',\n",
-    "       'kernel_size', 'batch_size']"
+    "## Old main"
    ]
   },
   {
@@ -447,7 +503,7 @@
     }
    ],
    "source": [
-    "############################################### main\n",
+    "############################################### OLD MAIN\n",
     "if option == 'InceptionTime':\n",
     "    # run nb_iter_ iterations of Inception on the whole TSC archive\n",
     "    classifier_name = 'inception'\n",
@@ -466,8 +522,7 @@
     "\n",
     "        print('\\t\\t\\tdataset_name: ', dataset_name)\n",
     "\n",
-    "        #x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets)\n",
-    "        x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
+    "        x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets, list_labels, 3, train_df)\n",
     "\n",
     "        output_directory = tmp_output_directory + dataset_name + '/'\n",
     "\n",
@@ -479,7 +534,7 @@
     "\n",
     "        fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n",
     "\n",
-    "        print('\\t\\t\\t\\tDONE')\n",
+    "        print(f'\\t\\t\\t\\tIteration {iter} DONE')\n",
     "\n",
     "        # the creation of this directory means\n",
     "        create_directory(output_directory + '/DONE')\n",
@@ -491,103 +546,13 @@
     "\n",
     "    tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + '/'\n",
     "\n",
-    "    x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
+    "    x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data(list_targets, list_labels, 1, train_df)\n",
     "\n",
     "    output_directory = tmp_output_directory + dataset_name + '/'\n",
     "\n",
     "    fit_classifier(x_train, y_train, x_test, y_test, y_true, nb_classes, classifier_name, output_directory)\n",
     "\n",
     "    print('\\t\\t\\t\\tDONE')\n",
-    "\n",
-    "elif option == 'InceptionTime_xp':\n",
-    "    # this part is for running inception with the different hyperparameters\n",
-    "    # listed in the paper, on the whole TSC archive\n",
-    "    archive_name = 'TSC'\n",
-    "    classifier_name = 'inception'\n",
-    "    max_iterations = 5\n",
-    "\n",
-    "    datasets_dict = read_all_datasets(root_dir, archive_name)\n",
-    "\n",
-    "    for xp in xps:\n",
-    "\n",
-    "        xp_arr = get_xp_val(xp)\n",
-    "\n",
-    "        print('xp', xp)\n",
-    "\n",
-    "        for xp_val in xp_arr:\n",
-    "            print('\\txp_val', xp_val)\n",
-    "\n",
-    "            kwargs = {xp: xp_val}\n",
-    "\n",
-    "            for iter in range(max_iterations):\n",
-    "\n",
-    "                trr = ''\n",
-    "                if iter != 0:\n",
-    "                    trr = '_itr_' + str(iter)\n",
-    "                print('\\t\\titer', iter)\n",
-    "\n",
-    "                for dataset_name in utils.constants.dataset_names_for_archive[archive_name]:\n",
-    "\n",
-    "                    output_directory = root_dir + '/results/' + classifier_name + '/' + '/' + xp + '/' + '/' + str(\n",
-    "                        xp_val) + '/' + archive_name + trr + '/' + dataset_name + '/'\n",
-    "\n",
-    "                    print('\\t\\t\\tdataset_name', dataset_name)\n",
-    "                    #x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data()\n",
-    "                    x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
-    "\n",
-    "                    # check if data is too big for this gpu\n",
-    "                    size_data = x_train.shape[0] * x_train.shape[1]\n",
-    "\n",
-    "                    temp_output_directory = create_directory(output_directory)\n",
-    "\n",
-    "                    if temp_output_directory is None:\n",
-    "                        print('\\t\\t\\t\\t', 'Already_done')\n",
-    "                        continue\n",
-    "\n",
-    "                    input_shape = x_train.shape[1:]\n",
-    "\n",
-    "                    from classifiers import inception\n",
-    "\n",
-    "                    classifier = inception.Classifier_INCEPTION(output_directory, input_shape, nb_classes,\n",
-    "                                                                verbose=False, build=True, **kwargs)\n",
-    "\n",
-    "                    classifier.fit(x_train, y_train, x_test, y_test, y_true)\n",
-    "\n",
-    "                    # the creation of this directory means\n",
-    "                    create_directory(output_directory + '/DONE')\n",
-    "\n",
-    "                    print('\\t\\t\\t\\t', 'DONE')\n",
-    "\n",
-    "    # we now need to ensemble each iteration of inception (aka InceptionTime)\n",
-    "    archive_name = ARCHIVE_NAMES[0]\n",
-    "    classifier_name = 'nne'\n",
-    "\n",
-    "    datasets_dict = read_all_datasets(root_dir, archive_name)\n",
-    "\n",
-    "    tmp_output_directory = root_dir + '/results/' + classifier_name + '/' + archive_name + '/'\n",
-    "\n",
-    "    for xp in xps:\n",
-    "        xp_arr = get_xp_val(xp)\n",
-    "        for xp_val in xp_arr:\n",
-    "\n",
-    "            clf_name = 'inception/' + xp + '/' + str(xp_val)\n",
-    "\n",
-    "            for dataset_name in utils.constants.dataset_names_for_archive[archive_name]:\n",
-    "                #x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = prepare_data()\n",
-    "                x_train, y_train, x_test, y_test, y_true, nb_classes, y_true_train, enc = test(list_targets, list_labels, 1, train_df)\n",
-    "\n",
-    "                output_directory = tmp_output_directory + dataset_name + '/'\n",
-    "\n",
-    "                from classifiers import nne\n",
-    "\n",
-    "                classifier = nne.Classifier_NNE(output_directory, x_train.shape[1:],\n",
-    "                                                nb_classes, clf_name=clf_name)\n",
-    "\n",
-    "                classifier.fit(x_train, y_train, x_test, y_test, y_true)\n",
-    "\n",
-    "elif option == 'run_length_xps':\n",
-    "    # this is to generate the archive for the length experiments\n",
-    "    run_length_xps(root_dir)\n",
     "\n",
     "elif option == 'generate_results_csv':\n",
     "    clfs = []\n",
