--- a/code/transformer.ipynb
+++ b/code/transformer.ipynb
@@ -280,7 +280,7 @@
     "        avg_test_acc = 0\n",
     "        test_acc_list = []\n",
     "        best_accuracy = 0\n",
-    "        file_name = f'../model_transformer/best_model_checkpoint_{target_1}_{target_2}_{test_subj}.pth'\n",
+    "        file_name = f'../models/transformer/best_model_checkpoint_{target_1}_{target_2}_{test_subj}.pth'\n",
     "\n",
     "        # Cross validation\n",
     "        for xv in range(parameters.cross_validation_passes):\n",
@@ -449,8 +449,8 @@
     "train_df = pd.read_csv(csvfile,  delimiter=\",\")  # 101 features (only AU_r)\n",
     "\n",
     "# Create folder to save models\n",
-    "if not os.path.exists(\"../model_transformer/\"):\n",
-    "    os.makedirs(\"../model_transformer/\")\n",
+    "if not os.path.exists(\"../models/transformer\"):\n",
+    "    os.makedirs(\"../models/transformer\")\n",
     "\n",
     "results_dict = {}\n",
     "\n",
